--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w sass/main.scss css/style.css"
+    "sass": "node-sass -w sass/main.scss css/style.css",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:sass": "concat -o css/style.concat.css css/style.comp.css",
+    "compress:css": "node-sass css/style.concat.css css/style.css --output-style compressed",
+    "build-css": "npm-run-all compile:sass concat:sass compress:css"
   },
   "author": "zuhran",
   "license": "ISC",
   "devDependencies": {
+    "concat": "^1.0.3",
     "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
